# look_saver

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
api/: apps.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_rename_user_id_look_owner.py
image/: __init__.py  models.py  serializers.py  tasks.py  urls.py  views.py
image/migrations/: 0001_initial.py  0002_alter_image_id.py  0003_alter_image_image.py
image/tests/: tests.py
image_test/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
image_test/migrations/: 0001_initial.py  0002_alter_image_id.py
images/: tasks.py  urls.py
look_collector/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
look_collector/fixtures/: my_fixture.json
look_collector/migrations/: 0001_initial.py  0002_alter_outfit_id_alter_outfit_look_id_and_more.py  0002_alter_outfit_id_alter_outfititem_id.py  0002_rename_outfititems_outfititem.py
look_collector/tests/: tests.py
look_saver/: __init__.py  asgi.py  celery.py  manage.py  settings.py  urls.py  wsgi.py
look_saver/look_saver/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
nginx/configs/: cite.conf
