[tool.poetry]
name = "look_saver"
version = "0.1.0"
description = ""
authors = ["German <94898610+gerfest776@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
